--- a/src/style/media/media_main.css
+++ b/src/style/media/media_main.css
@@ -76,6 +76,17 @@
     }
 }
 
+@media (max-width: 1180px) {
+    section.traffic_patrol .traffic_patrol-text {
+        font-size: 1.4rem;
+        line-height: 20px;
+    }
+
+    section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_title {
+        margin-bottom: 48px;
+    }
+}
+
 @media (max-width: 1100px) {
     section.situation_centre .situation_centre_grid-wrapper .major_events-3 .major_events-text {
         font-size: 1.4rem;
@@ -118,16 +129,25 @@
     section.traffic_patrol .traffic_patrol_grid-wrapper {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 168px 168px 280px;
+        grid-template-rows: 168px 168px 0 280px;
         grid-auto-columns: 1fr;
         gap: 20px 20px;
         grid-auto-flow: row;
         grid-template-areas:
         "traffic_patrol-1 traffic_patrol-text-2 traffic_patrol-text-3 traffic_patrol-text-3"
         ". traffic_patrol-text-4 traffic_patrol-text-5 traffic_patrol-text-5"
-        ". traffic_patrol-slide-6 . .";
+        ". . . ."
+        ". traffic_patrol-no-slide-7 . .";
     }
 
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-6,
+    section.traffic_patrol .traffic_patrol_grid-wrapper .slider_button-wrapper {
+        display: none;
+    }
+
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-7 {
+        display: block;
+    }
 
 
 
@@ -267,6 +287,78 @@
         margin-right: 0;
         margin-bottom: 10px;
     }
+
+
+
+
+    footer.footer_main .footer_main_grid-wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-auto-columns: 1fr;
+        gap: 20px 20px;
+        grid-auto-flow: row;
+        grid-template-areas:
+        "footer-title-1 footer-menu-2 footer-menu-2 footer-contacts-3"
+        ". footer-menu-2 footer-menu-2 footer-contacts-3"
+        "footer-media-4 footer-menu-2 footer-menu-2 footer-contacts-3";
+    }
+
+    footer.footer_main .footer_main_grid-wrapper .footer-menu-2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    footer.footer_main .footer_main_grid-wrapper .footer-menu-2 .text_wrapper {
+        align-self: flex-start;
+        margin-left: 70px;
+    }
+
+    footer.footer_main .footer_main_grid-wrapper .footer-menu-2 .footer-menu-title {
+        margin-bottom: 34px;
+    }
+
+    footer.footer_main .footer_main_grid-wrapper .footer-menu-2 .footer-menu-links .footer-menu-link:not(:last-child) {
+        margin-bottom: 24px;
+    }
+}
+
+@media (max-width: 820px) {
+    section.traffic_patrol .traffic_patrol-text {
+        font-size: 1.4rem;
+        line-height: 21px;
+    }
+
+    section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_title {
+        margin-bottom: 20px;
+    }
+
+    section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_text {
+        font-size: 1.4rem;
+    }
+
+    section.help_desk .help_desk_grid-wrapper .equipment-4 .text {
+        font-size: 1.3rem;
+    }
+
+    section.help_desk .help_desk_grid-wrapper .driver-3 .driver_text {
+        font-size: 1.4rem;
+        line-height: 20px;
+    }
+
+    section.help_desk .help_desk_grid-wrapper {
+        display: grid;
+        grid-template-columns: 130px 1fr 1fr 1fr;
+        grid-template-rows: 293px 284px 120px 1fr;
+        gap: 20px 20px;
+        grid-auto-flow: row;
+        grid-template-areas:
+        "help_desk-1 slide-5 parkon-2 parkon-2"
+        ". slide-6 equipment-4 equipment-4"
+        ". driver-3 equipment-4 equipment-4"
+        ". . equipment-4 equipment-4";
+    }
 }
 
 @media (max-width: 800px) {
@@ -318,16 +410,48 @@
     section.traffic_patrol .traffic_patrol_grid-wrapper {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 48px 144px 64px 336px 264px;
+        grid-template-rows: 48px 144px 0 336px 264px;
         grid-auto-columns: 1fr;
         gap: 40px 40px;
         grid-auto-flow: row;
         grid-template-areas:
         "traffic_patrol-1 ."
         "traffic_patrol-text-2 traffic_patrol-text-4"
-        ". ."
-        "traffic_patrol-slide-6 ."
+        ". slider_button-wrapper"
+        "traffic_patrol-slide-6 traffic_patrol-slide-6"
         "traffic_patrol-text-3 traffic_patrol-text-5";
+    }
+
+    section.traffic_patrol .traffic_patrol-title {
+        max-width: 232px;
+    }
+
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-6,
+    section.traffic_patrol .traffic_patrol_grid-wrapper .slider_button-wrapper {
+        display: block;
+    }
+
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-7 {
+        display: none;
+    }
+
+    section.traffic_patrol .traffic_patrol_slider .traffic_patrol-card.slid {
+        max-width: 290px;
+    }
+
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol_slider-buttons button {
+        width: 64px;
+        height: 64px;
+    }
+
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol_slider-buttons button img {
+        width: 100%;
+        height: 100%;
+    }
+
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol_slider-buttons {
+        top: 236px;
+        right: 0;
     }
 
 
@@ -385,6 +509,144 @@
     section.situation_centre .situation_centre_grid-wrapper .man_plus_major_events-8 .man_plus_major_events-text {
         font-size: 1.6rem;
         line-height: 28px;
+    }
+
+
+    /*section.help_desk .help_desk_grid-wrapper {*/
+    /*    display: grid;*/
+    /*    grid-template-columns: repeat(2, 1fr);*/
+    /*    grid-template-rows: 28px 388px 72px 84px 726px;*/
+    /*    gap: 40px;*/
+    /*    grid-auto-flow: row;*/
+    /*    grid-template-areas:*/
+    /*    "help_desk-1 ."*/
+    /*    "parkon-2 slide-6"*/
+    /*    "driver-3 ."*/
+    /*    ". ."*/
+    /*    "equipment_mobile equipment_mobile";*/
+    /*}*/
+
+    /*section.help_desk .help_desk_grid-wrapper .equipment-4 {*/
+    /*    grid-area: equipment-4;*/
+    /*    display: grid;*/
+    /*    grid-template-columns: repeat(3, 1fr);*/
+    /*    grid-template-rows: 151px 151px 151px 151px;*/
+    /*    gap: 20px 64px;*/
+    /*    grid-auto-flow: row;*/
+    /*    grid-template-areas:*/
+    /*    "skill-10 skill-6 skill-5"*/
+    /*    "skill-1 skill-2 skill-4"*/
+    /*    "skill-3 skill-7 skill-9"*/
+    /*    "skill-8 . .";*/
+    /*}*/
+
+    section.help_desk .help_desk_grid-wrapper .equipment_mobile,
+    section.help_desk .help_desk_grid-wrapper .equipment_mobile-text {
+        display: block;
+    }
+
+    section.help_desk .help_desk_grid-wrapper .slide-5,
+    section.help_desk .help_desk_grid-wrapper .equipment-4 {
+        display: none;
+    }
+
+    section.help_desk .help_desk_grid-wrapper {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 28px 388px 72px 810px;
+        gap: 40px;
+        grid-auto-flow: row;
+        grid-template-areas:
+        "help_desk-1 ."
+        "parkon-2 slide-6"
+        "driver-3 equipment_mobile-text"
+        "equipment_mobile equipment_mobile";
+    }
+
+    section.help_desk .help_desk_grid-wrapper .equipment_mobile-text .text {
+        font-family: 'MoscowSans', sans-serif;
+        font-size: 1.6rem;
+        font-weight: 400;
+        line-height: 24px;
+    }
+
+    section.help_desk .help_desk_grid-wrapper .equipment_mobile {
+        grid-area: equipment_mobile;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 84px 725px;
+        gap: 20px;
+        grid-auto-flow: row;
+        grid-template-areas:
+        "equipment_mobile_control equipment_mobile_control"
+        "equipment_mobile_skills equipment_mobile_skills"
+    }
+
+    section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_control .equipment_mobile_control-title {
+        font-family: 'MoscowSans', sans-serif;
+        font-size: 1.8rem;
+        font-weight: 400;
+        text-align: center;
+    }
+
+    section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_skills {
+        /*grid-area: equipment_mobile;*/
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 151px 151px 151px 151px;
+        gap: 20px 64px;
+        grid-auto-flow: row;
+        grid-template-areas:
+        "skill-10 skill-6 skill-5"
+        "skill-1 skill-2 skill-4"
+        "skill-3 skill-7 skill-9"
+        "skill-8 . .";
+    }
+
+
+    footer.footer_main .footer_main_grid-wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        grid-auto-columns: 1fr;
+        gap: 20px 20px;
+        grid-auto-flow: row;
+        grid-template-areas:
+        "footer-title-1 footer-menu-2"
+        ". footer-menu-2"
+        "footer-media-4 footer-menu-2"
+        "footer-contacts-3 footer-contacts-3";
+    }
+
+    footer.footer_main .footer_main_grid-wrapper .footer-menu-2 {
+        display: block;
+        /*flex-direction: column;*/
+        /*align-items: center;*/
+    }
+
+    footer.footer_main .footer_main_grid-wrapper .footer-menu-2 .footer-menu-links,
+    footer.footer_main .footer_main_grid-wrapper .footer-menu-2 .text_wrapper {
+        margin-left: 0;
+    }
+
+
+    footer.footer_main .footer_main_grid-wrapper .footer-menu-2 .footer-menu-title {
+        margin-bottom: 34px;
+        margin-left: 0;
+    }
+
+    footer.footer_main .footer_main_grid-wrapper .footer-menu-2 .footer-menu-links .footer-menu-link:not(:last-child) {
+        margin-bottom: 24px;
+    }
+
+    footer.footer_main .footer_main_grid-wrapper .footer-contacts-3 {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+        gap: 12px;
+        grid-auto-flow: row;
+        grid-template-areas:
+        "contacts-1 contacts-2 contacts-3";
     }
 }
 
@@ -643,7 +905,7 @@
     section.traffic_patrol .traffic_patrol_grid-wrapper {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 58px 199px 360px 241px;
+        grid-template-rows: 58px 199px 380px 241px;
         grid-auto-columns: 1fr;
         gap: 40px 40px;
         grid-auto-flow: row;
@@ -662,13 +924,37 @@
     section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-text-2,
     section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-text-3,
     section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-text-4,
-    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-text-5 {
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-text-5,
+    section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-no-slide-7,
+    section.traffic_patrol .traffic_patrol_grid-wrapper .slider_button-wrapper {
         display: none;
     }
 
     section.traffic_patrol .traffic_patrol-text-mobile-1 .traffic_patrol-text:first-child,
     section.traffic_patrol .traffic_patrol-text-mobile-2 .traffic_patrol-text:first-child {
         margin-bottom: 14px;
+    }
+
+    section.traffic_patrol .traffic_patrol_slider {
+        height: 336px;
+    }
+
+    section.traffic_patrol .traffic_patrol_slider .traffic_patrol-card.slid {
+        max-width: 336px;
+        width: 100%;
+        height: 100%;
+    }
+
+    section.traffic_patrol .traffic_patrol-slide-6 .swiper-pagination {
+        display: block;
+    }
+
+    .swiper-pagination-bullet {
+        background-color: #FFF;
+    }
+
+    .swiper-pagination-bullet-active {
+        background-color: #62A744;
     }
 
 
@@ -682,15 +968,21 @@
         grid-template-areas:
         "situation-1"
         "brain_heart-2"
-        "employ-4"
+        "employ_plus_bus_slider"
         "slider-5"
     }
 
     section.situation_centre .situation_centre_grid-wrapper .major_events-3,
     section.situation_centre .situation_centre_grid-wrapper .bus-6,
     section.situation_centre .situation_centre_grid-wrapper .man_text-7,
+    section.situation_centre .situation_centre_grid-wrapper .employ-4,
     section.situation_centre .situation_centre_grid-wrapper .man_plus_major_events-8 {
         display: none;
+    }
+
+    section.situation_centre .situation_centre_grid-wrapper .employ_plus_bus_slider {
+        display: block;
+        overflow: hidden;
     }
 
     section.situation_centre .situation_centre_grid-wrapper .brain_heart-2 {
@@ -703,6 +995,89 @@
         right: -28px;
         top: 244px;
     }
+
+    section.situation_centre .swiper-pagination-bullets {
+        bottom: -20px;
+        position: relative;
+        text-align: center;
+    }
+
+
+
+
+    section.help_desk .help_desk_grid-wrapper .driver-3,
+    section.help_desk .help_desk_grid-wrapper .equipment_mobile-text,
+    section.help_desk .help_desk_grid-wrapper .slide-6 {
+        display: none;
+    }
+
+    section.help_desk .help_desk_grid-wrapper .mobile_text_combo,
+    section.help_desk .help_desk_grid-wrapper .equipment_mobile-slide {
+        display: block;
+    }
+
+    section.help_desk .help_desk_grid-wrapper .equipment_mobile-slide {
+        overflow: hidden;
+    }
+
+    section.help_desk .help_desk_grid-wrapper .equipment_mobile-slide .swiper-pagination3 {
+        margin-top: 20px;
+        text-align: center;
+    }
+
+    section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_title {
+        font-size: 1.6rem;
+        line-height: 24px;
+        margin-bottom: 20px;
+        max-width: 273px;
+    }
+
+    section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_text {
+        font-size: 1.4rem;
+        line-height: 24px;
+    }
+
+    section.help_desk .help_desk_grid-wrapper .mobile_text_combo .mobile_text_combo-text {
+        font-family: 'MoscowSans', sans-serif;
+        font-size: 1.4rem;
+        font-weight: 400;
+        line-height: 21px;
+    }
+
+    section.help_desk .help_desk_grid-wrapper .mobile_text_combo .mobile_text_combo-text:first-child {
+        margin-bottom: 10px;
+    }
+
+
+    section.help_desk .help_desk_grid-wrapper {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 30px 332px 115px 940px 388px;
+        gap: 40px;
+        grid-auto-flow: row;
+        grid-template-areas:
+        "help_desk-1"
+        "parkon-2"
+        "."
+        "equipment_mobile"
+        "equipment_mobile-slide";
+    }
+
+    section.help_desk .help_desk_grid-wrapper .equipment_mobile .equipment_mobile_skills {
+        /*grid-area: equipment_mobile;*/
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 151px 151px 151px 151px 151px;
+        gap: 10px 20px;
+        grid-auto-flow: row;
+        grid-template-areas:
+        "skill-1 skill-2"
+        "skill-3 skill-4"
+        "skill-5 skill-6"
+        "skill-7 skill-8"
+        "skill-9 skill-10";
+    }
+
 }
 
 @media (max-width: 400px) {
@@ -719,6 +1094,13 @@
     section.main .main_info .main_info-link {
         padding-top: 17px;
         border: 4px solid white;
+    }
+}
+
+@media (max-width: 375px) {
+    section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_text,
+    section.help_desk .help_desk_grid-wrapper .parkon-2 .parkon_title {
+        line-height: 21px;
     }
 }
 
